--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,4 +1,7 @@
 <!DOCTUPE html>
 <html>
-<head></head>
-<html>
+<head>
+	<meta charset="utf-8">
+	<title>My solution for module2</title>
+</head>
+</html>
