--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,9 +2,37 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>My solution for module2</title>
 </head>
 <body>
 	<h1>Our Menu</h1>
+	<div class="row">
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="my-section">
+				<div class="title-section">
+					<div class="title-chiken">Chiken</div>
+				</div>
+				<p>A lot of people "tinker" with CSS. In this module, we'll take you from the very basics of CSS3 to some fairly advanced concepts like floating and CSS rule conflict resolution. We'll go over the 'box model', background property, etc. We'll finish off the module with learning about Responsive Design using our own CSS code as well as start introducing Twitter Bootstrap with its essential Grid System.</p>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="my-section">
+				<div class="title-section">
+					<div class="title-beef">Beef</div>
+				</div>
+				<p>A lot of people "tinker" with CSS. In this module, we'll take you from the very basics of CSS3 to some fairly advanced concepts like floating and CSS rule conflict resolution. We'll go over the 'box model', background property, etc. We'll finish off the module with learning about Responsive Design using our own CSS code as well as start introducing Twitter Bootstrap with its essential Grid System.</p>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-12 col-xs-12">
+			<div class="my-section">
+				<div class="title-section">
+					<div class="title-sushi">Sushi</div>
+				</div>
+				<p>A lot of people "tinker" with CSS. In this module, we'll take you from the very basics of CSS3 to some fairly advanced concepts like floating and CSS rule conflict resolution. We'll go over the 'box model', background property, etc. We'll finish off the module with learning about Responsive Design using our own CSS code as well as start introducing Twitter Bootstrap with its essential Grid System.</p>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
