module3 change text-center

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -30,7 +30,7 @@
 		        </div><!-- .navbar-header -->
 
 		        <div id="collapsable-nav" class="collapse navbar-collapse">
-		           <ul id="nav-list" class="nav navbar-nav navbar-right">
+		           <ul id="nav-list" class="nav navbar-nav navbar-right text-center">
 		            <li class="hidden-lg hidden-md hidden-sm">
 		              <a href="#chiken">Chiken</a>
 		            </li>
